# cpp-life-of-boids

./: .atom-build.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .ignore  CMakeLists.txt  README.md  script.sh
doc/: math.md
doc/contents/: code_logic_architecture.md  conclusion_openings.md  continuous_integration.md  overview.md  profiling_performance_computing.md  work_methodology.md
src/: Agent.cpp  Agent.hpp  Agents.cpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Flock.cpp  Flock.hpp  GraphicalManager.cpp  GraphicalManager.hpp  graphics.cpp  graphics.hpp  graphics_main.cpp  main.cpp  main_chrono.cpp  main_opencv.cpp  main_profiling.cpp  math_main.cpp  vec2.cpp
src/laws/: CMakeLists.txt  CohesionLaw.cpp  Law.cpp  Law.hpp  SeparationLaw.cpp  SeparationLaw.hpp
src/lib/myLaws/: AlignmentLaw.cpp  AlignmentLaw.hpp  CMakeLists.txt  CohesionLaw.cpp  CohesionLaw.hpp  HuntingLaw.cpp  HuntingLaw.hpp  Law.cpp  Law.hpp  SeparationLaw.cpp  SeparationLaw.hpp
src/lib/myMath/: Vec2.cpp  Vec2.hpp  utils.cpp  utils.hpp
src/myMath/: CMakeLists.txt  Vec2.cpp  Vec2.hpp  chat.cpp  utils.cpp  utils.hpp  vec2.cpp  vec2.hpp
src/resources/: Agent.cpp  Agent.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Flock.cpp  Flock.hpp
src/resources/controller/: AgentDisplayer.hpp  CMakeLists.txt  Color.h  TriangleDisplayer.cpp  TriangleDisplayer.hpp  flock_generator.cpp  flock_generator.hpp
src/resources/graphics/: CMakeLists.txt  GraphicalManager.cpp  GraphicalManager.hpp  glx.cpp  glx.hpp  graphics.cpp  graphics.hpp
src/resources/graphics/shaders/: points.hpp  triangle.hpp
src/resources/model/: Agent.cpp  Agent.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Eagle.cpp  Eagle.hpp  Flock.cpp  Flock.hpp
src/shaders/: lines.hpp  points.cpp  points.hpp  triangle.hpp
tests/: CMakeLists.txt  Test_AlignmentLaw.cpp  test_bird.cpp  test_flock_bird.cpp  test_graphics.cpp  test_law.cpp  test_math.cpp
